<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/on_boarding_purple_background"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/walking" />
    </LinearLayout>

    <TextView
        android:id="@+id/ext_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_title"
        android:textStyle="normal"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_body"
        android:textStyle="normal"
        android:textSize="18sp"
        android:padding="16sp"
        android:textAlignment="center"
        />
</LinearLayout>