<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/on_boarding_purple_background"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/measurement" />
    </LinearLayout>

    <TextView
        android:id="@+id/ext_onboarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_second_title"
        android:textStyle="normal"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/onboarding_second_body"
        android:textStyle="normal"
        android:textSize="18sp"
        android:padding="16sp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_height"
            android:layout_marginStart="12sp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_height"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_weight"
            android:layout_marginStart="12sp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_weight"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>